Refactor: Simplify to single anti_bot_core.py module
- Remove Korean-specific scrapers (scraper_kr.py, scraper_eng.py)
- Archive benchmark, dashboard, and example scripts
- Clean up test sites and reports
- Update .gitignore to exclude archive/ and other杂物
- Add CHANGELOG.md for version tracking
- Rewrite README.md as generic anti-bot framework documentation

The project now focuses solely on the anti_bot_core.py module as a
general-purpose anti-bot detection bypass framework.

--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,31 @@ venv.bak/
 # mkdocs documentation
 /site
 
+# Test sites
+test_sites/
+
+# Archive - old files kept for reference
+archive/
+
+# Benchmark results
+benchmark_results/
+
+# Demo file
+demo.gif
+
+# Example script
+anti_bot_example.py
+
+# Old scripts
+old_scripts/
+
+# Benchmark scripts
+benchmark_scripts/
+
+# Reports
+reports/
+
+
 # mypy
 .mypy_cache/
 .dmypy.json
